syntax = "proto3";

option go_package = "internal/proto";

import "google/protobuf/wrappers.proto";

message DeleteUserURLsRequest {
  repeated google.protobuf.StringValue urls = 1;
}