syntax = "proto3";

package internal.proto;

message InternalStatsRequest {
}

message InternalStatsResponse {
  string urls = 1;
  string users = 2;
}

service ShortURLService {
  rpc InternalStats(InternalStatsRequest) returns (InternalStatsResponse);
}